objects/tffa__EducationalInstitutionSpecification__c.object
<CustomObject>
    <description>Used to store education institution specification information like State, institute name, grade, major etc.. This will be used in a education  loan application .</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__City__c</fullName>
        <description>Name of the city where institute is located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InstitutionCode__c</fullName>
        <description>Unique identifier of the institution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Institution code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__InstitutionName__c</fullName>
        <description>Name of the institution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Institution name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StateCode__c</fullName>
        <description>Abbreviated code of the state</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>Name of the state where institute is located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SupportedGrades__c</fullName>
        <description>List of supported grades in the institute</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Supported Grades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Educational Institution Specification</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>tffa__State__c</columns>
        <columns>tffa__InstitutionName__c</columns>
        <columns>tffa__InstitutionCode__c</columns>
        <columns>tffa__SupportedGrades__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educational Institution Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>